# sync

./: .gitignore  CLAUDE.md  README.md  justfile  pyproject.toml  pytest.ini  ruff.toml
.github/workflows/: ci.yml
scripts/: doctor.py
specs/: architecture.md  integrations.md  sync-likes.md  sync-subs.md
src/new_folder_layout/: README.md  pytest.ini
src/new_folder_layout/shell/config/: settings.py
src/new_folder_layout/shell/contexts/: README.md  base.py  dev.py  prod.py  test.py
src/new_folder_layout/tests/: conftest.py
src/new_folder_layout/tests/e2e/: test_example.py
src/new_folder_layout/tests/integration/: test_example.py
src/new_folder_layout_2/domain/bookmarks/: decisions.py
src/new_folder_layout_2/domain/bookmarks/core/: decisions.py
src/new_folder_layout_2/domain/bookmarks/shell/: main.py
src/new_folder_layout_2/domain/bookmarks_2/core/: decisions.py  entities.py
src/new_folder_layout_2/domain/subscriptions/shell/: main.py
src/sync/: contexts.py  errors.py  logging.py
src/sync/io/feedbin/: __init__.py  auth.py  client.py
src/sync/io/feedbin/tests/: test_client.py
src/sync/io/notion/: __init__.py
src/sync/io/op/tests/: test_secrets.py
src/sync/io/pushover/: __init__.py  auth.py  client.py
src/sync/io/youtube/: __init__.py  auth.py  client.py  likes.py
src/sync/jobs/sync_youtube_likes_to_notion/: decisions.py  shell.py
src/sync/jobs/sync_youtube_subscriptions_to_feedbin/: main.py
src/youtube_sync/: logging.py  types.py
src/youtube_sync/io/feedbin/: __init__.py  auth.py  client.py
src/youtube_sync/io/notion/: bookmarks.py
src/youtube_sync/io/pushover/: __init__.py  auth.py  client.py  models.py
src/youtube_sync/io/youtube/: __init__.py  auth.py  client.py  models.py
src/youtube_sync/jobs/: sync_likes.py  sync_subs.py
youtube_sync/: main.py
youtube_sync/io/feedbin/: client.py  models.py
youtube_sync/io/feedbin/tests/: test_client.py
youtube_sync/io/op/: secrets.py
youtube_sync/io/pushover/: client.py
youtube_sync/io/pushover/tests/: test_client.py
youtube_sync/jobs/: sync_likes.py  sync_subs.py
(+8 files in other folders)
