[project]
name = "youtube-sync"
version = "0.1.0"
description = "Adds my YouTube subscriptions to Feedbin and my liked videos to Notion."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]
