# Helps scripts below work
[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

# Required when using src layout
[tool.hatchling.build.targets.wheel]
packages = ["src/youtube_sync"]

[project]
name = "youtube-sync"
version = "0.1.0"
description = "Adds my YouTube subscriptions to my Feedbin subscriptions and my liked videos to Notion."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "httpx>=0.28.1",
    "pydantic>=2.12.5",
]

[dependency-groups]
dev = [
    "inline-snapshot[dirty-equals]>=0.31.1",
    "pytest>=9.0.2",
    "pytest-httpx>=0.36.0",
    "ruff>=0.14.10",
    "ty>=0.0.8",
]

# uv run sync-likes
# uv run sync-subs
[project.scripts]
sync-likes = "youtube_sync.jobs.sync_likes:main"
sync-subs = "youtube_sync.jobs.sync_subs:main"

[tool.ruff]
line-length = 100
